# jutge-api-clients

./: .env  .eslintrc.js  .gitignore  .prettierrc.json  README.md  eslint.config.mjs  main.py  package.json  pyproject.toml  tsconfig.json
src/: .gitignore  cli.ts  clients.ts  gen-client.ts  gen.ts  index.ts  types.ts  utilities.ts
src/clients/cpp/: generator.ts  httplib.cc  skeleton1.cpp  skeleton2.cpp
src/clients/java/: JutgeApiClient.java  generator.ts
src/clients/javascript/: generator.ts  skeleton.js
src/clients/php/: generator.ts  skeleton.php
src/clients/python/: generator.ts  skeleton.py  tutorial.py
src/clients/typescript/: generator.ts  skeleton.ts
src/tests/: preload.ts
src/tests/cpp/: Makefile  jutge_api_client.cpp  tests.cpp
src/tests/java/: Makefile  Test.java
src/tests/javascript/: misc.test.js
src/tests/php/: Makefile  MiscTest.php  README.md
src/tests/python/: test_auth.py  test_misc.py  test_playground.py  test_student.py  test_tables.py  test_testing_playground.py  tutorial.py
src/tests/typescript/: misc.test.ts  student.test.ts
src/tutorials/cpp/: Makefile  tutorial.cpp
src/tutorials/java/: JutgeApiClient.java  Makefile  Tutorial.java
src/tutorials/javascript/: jutge_api_client.js  tutorial.html
src/tutorials/php/: jutge_api_client.php  tutorial.php
src/tutorials/python/: jutge_api_client.py  tutorial.py
src/tutorials/typescript/: jutge_api_client.ts  tutorial.ts
