[project]
name = "jutge-api-clients"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pluggy>=1.5.0",
    "pydantic>=2.11.0",
    "pytest>=8.3.5",
    "pyyaml>=6.0.2",
    "requests>=2.32.3",
    "requests-toolbelt>=1.0.0",
    "rich>=13.9.4",
]
